Suppress Mac OSX support in GraphExplorer

--- a/Waterloo_For_R/gshell/inst/java/GShell/lib/nblibraries.properties
+++ b/Waterloo_For_R/gshell/inst/java/GShell/lib/nblibraries.properties
@@ -3,4 +3,4 @@ libs.CopyLibs.classpath=\
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=2.0
 libs.Groovy.classpath=\
-    ${base}/../../../../../../Sources/Java/ThirdPartyDependencies/groovy-all-2.4.3.jar
+    ${base}/../../../../../../Sources/Java/ThirdPartyDependencies/groovy-all.jar
