--- a/Waterloo_For_R/gshell/inst/java/GShell/nbproject/project.properties
+++ b/Waterloo_For_R/gshell/inst/java/GShell/nbproject/project.properties
@@ -34,6 +34,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.6
@@ -58,7 +59,7 @@ main.class=kcl.waterloo.editor.Editor
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 no.dependencies=true
-platform.active=JDK_1.7
+platform.active=JDK_1.6
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
